Add ignored files and directories to .gitignore
This commit updates the .gitignore file to include:
- Keystore related files and directories.
- Google Services configuration.
- Release build directories.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,16 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Keystore files
+*.keystore
+*.jks
+keystore.properties
+/app/release
+/app/debug
+
+# Google Services
+app/google-services.json
+
+# Release files
+app/release/
