--- a/gradle.properties
+++ b/gradle.properties
@@ -4,20 +4,54 @@
 # any settings specified in this file.
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
+
+# Gradle daemon settings
+org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. For more details, visit
-# https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
-# org.gradle.parallel=true
+
+# Kotlin daemon settings
+kotlin.daemon.jvmargs=-Xmx6144m
+
+# Enable parallel builds
+org.gradle.parallel=true
+org.gradle.workers.max=4
+
+# Enable build caching
+org.gradle.caching=true
+
+# Enable configuration on demand
+org.gradle.configureondemand=true
+
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Enable Jetifier
+android.enableJetifier=false
+
+# Enable R8 full mode
+android.enableR8.fullMode=true
+
+# Enable BuildConfig generation
+# Enable ViewBinding generation
+android.defaults.buildfeatures.viewbinding=true
+
+# Kapt settings
+kapt.use.worker.api=true
+kapt.incremental.apt=true
+kapt.include.compile.classpath=false
+
+# Memory settings for KSP
+ksp.memory.heap.size=6144m
+
+# Suppress compileSdk warning
+android.suppressUnsupportedCompileSdk=34
