--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx8192m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=2g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -52,7 +52,17 @@ kapt.incremental.apt=true
 kapt.include.compile.classpath=false
 
 # Memory settings for KSP
-ksp.memory.heap.size=6144m
+ksp.memory.heap.size=2048m
+ksp.memory.stack.size=512m
 
 # Suppress compileSdk warning
 android.suppressUnsupportedCompileSdk=34
+
+# KSP incremental settings
+ksp.incremental=true
+ksp.incremental.intermodule=true
+ksp.workers.count=4
+
+# Gradle settings
+org.gradle.daemon=true
+org.gradle.workers.max=8
