--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'org.jetbrains.kotlin.kapt'
     id 'com.google.dagger.hilt.android'
     id 'com.google.devtools.ksp'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -12,7 +14,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.clicknote"
-        minSdk 24
+        minSdk 26
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -68,6 +70,7 @@ dependencies {
     def hilt_version = "2.50"
     def room_version = "2.6.1"
     def compose_version = "1.5.4"
+    def firebase_version = "32.7.2"
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.0')
@@ -76,14 +79,16 @@ dependencies {
     
     // Compose
     implementation platform('androidx.compose:compose-bom:2024.02.00')
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material3:material3:1.2.0"
-    implementation "androidx.compose.ui:ui-graphics:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.runtime:runtime:$compose_version"
-    implementation "androidx.compose.foundation:foundation:$compose_version"
-    implementation "androidx.compose.material:material-icons-core:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.material3:material3"
+    implementation "androidx.compose.material:material"
+    implementation "androidx.compose.ui:ui-graphics"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.runtime:runtime"
+    implementation "androidx.compose.foundation:foundation"
+    implementation "androidx.compose.material:material-icons-core"
+    implementation "androidx.compose.material:material-icons-extended"
+    implementation "androidx.compose.material3:material3-window-size-class"
     
     // Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.1'
@@ -105,6 +110,30 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.11.0'
+
+    // Firebase
+    implementation platform("com.google.firebase:firebase-bom:$firebase_version")
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+
+    // Stripe for payments
+    implementation 'com.stripe:stripe-android:20.37.1'
+
+    // MixPanel for analytics
+    implementation 'com.mixpanel.android:mixpanel-android:7.3.1'
+
+    // AWS SDK for cloud storage
+    implementation 'com.amazonaws:aws-android-sdk-core:2.73.0'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.73.0'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.73.0'
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
