--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.kapt'
-    id 'com.google.dagger.hilt.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
     id 'com.google.devtools.ksp'
+    id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
 }
@@ -23,6 +23,18 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                    "room.schemaLocation": "$projectDir/schemas",
+                    "room.incremental": "true",
+                    "room.expandProjection": "true",
+                    "dagger.fastInit": "enabled",
+                    "dagger.formatGeneratedSource": "enabled"
+                ]
+            }
+        }
     }
 
     buildTypes {
@@ -39,6 +51,10 @@ android {
 
     kotlinOptions {
         jvmTarget = '17'
+        freeCompilerArgs += [
+            "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api",
+            "-opt-in=androidx.compose.animation.ExperimentalAnimationApi"
+        ]
     }
 
     buildFeatures {
@@ -46,7 +62,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.1'
+        kotlinCompilerExtensionVersion "1.4.3"
     }
 
     packaging {
@@ -55,30 +71,40 @@ android {
         }
     }
 
-    kapt {
-        arguments {
-            arg("dagger.fastInit", "enabled") 
-            arg("dagger.formatGeneratedSource", "disabled")
-            arg("dagger.logBindingFailure", "ERROR")
-            arg("dagger.logGeneratedCode", "ERROR")
-            arg("dagger.logDiagnosticMessages", "ERROR")
+    configurations.all {
+        resolutionStrategy {
+            force 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+            force 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+            force 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
         }
     }
 }
 
+kapt {
+    correctErrorTypes true
+    useBuildCache true
+    arguments {
+        arg("dagger.fastInit", "enabled")
+        arg("dagger.formatGeneratedSource", "enabled")
+    }
+}
+
 dependencies {
-    def hilt_version = "2.50"
-    def room_version = "2.6.1"
-    def compose_version = "1.5.4"
+    def work_version = "2.9.0"
+    def hilt_version = "2.44"
+    def room_version = "2.5.0"
+    def compose_version = "1.4.3"
     def firebase_version = "32.7.2"
+    def retrofit_version = "2.9.0"
+    def jackson_version = "2.14.2"
 
     implementation 'androidx.core:core-ktx:1.12.0'
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.0')
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.10')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     implementation 'androidx.activity:activity-compose:1.8.2'
     
-    // Compose
-    implementation platform('androidx.compose:compose-bom:2024.02.00')
+    // Compose dependencies
+    implementation platform('androidx.compose:compose-bom:2023.08.00')
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.material3:material3"
     implementation "androidx.compose.material:material"
@@ -101,20 +127,30 @@ dependencies {
     implementation "com.google.accompanist:accompanist-permissions:0.32.0"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.32.0"
 
+    // WorkManager
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation "androidx.work:work-runtime:$work_version"
+    
+    // Hilt Worker
+    implementation 'androidx.hilt:hilt-work:1.1.0'
+    kapt 'androidx.hilt:hilt-compiler:1.1.0'
+
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
+    implementation 'androidx.hilt:hilt-work:1.1.0'
+    kapt 'androidx.hilt:hilt-compiler:1.1.0'
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    ksp "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // Material Design
     implementation 'com.google.android.material:material:1.11.0'
 
-    // Firebase
+    // Firebase & Google Cloud
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
@@ -124,23 +160,60 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
+    // OpenAI
+    implementation 'com.aallam.openai:openai-client:3.7.0'
+    implementation 'io.ktor:ktor-client-android:2.3.8'
+
     // Stripe for payments
     implementation 'com.stripe:stripe-android:20.37.1'
 
     // MixPanel for analytics
     implementation 'com.mixpanel.android:mixpanel-android:7.3.1'
 
-    // AWS SDK for cloud storage
-    implementation 'com.amazonaws:aws-android-sdk-core:2.73.0'
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.73.0'
-    implementation 'com.amazonaws:aws-android-sdk-cognito:2.73.0'
+    // Gson for JSON conversion
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2024.02.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // Billing
+    implementation 'com.android.billingclient:billing-ktx:6.1.0'
+
+    // AWS SDK
+    implementation('com.amazonaws:aws-android-sdk-s3:2.73.0') {
+        exclude group: 'com.fasterxml.jackson.core'
+    }
+    implementation('com.amazonaws:aws-android-sdk-mobile-client:2.73.0') {
+        exclude group: 'com.fasterxml.jackson.core'
+    }
+
+    // Azure Storage
+    implementation('com.azure:azure-storage-blob:12.24.1') {
+        exclude group: 'com.fasterxml.jackson.core'
+        exclude group: 'com.fasterxml.jackson.dataformat'
+    }
+
+    // Google Cloud Storage
+    implementation(platform('com.google.cloud:libraries-bom:26.29.0')) {
+        exclude group: 'com.fasterxml.jackson.core'
+    }
+    implementation('com.google.cloud:google-cloud-storage') {
+        exclude group: 'com.fasterxml.jackson.core'
+    }
+
+    // Jackson dependencies
+    implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
 } 
