--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
 buildscript {
+    ext {
+        kotlin_version = '1.8.10'
+        compose_compiler_version = '1.4.3'
+        ksp_version = '1.8.10-1.0.9'
+        hilt_version = '2.44'
+    }
+    repositories {
+        google()
+        mavenCentral()
+    }
     dependencies {
+        classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath 'com.google.gms:google-services:4.4.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
     }
@@ -8,7 +21,11 @@ buildscript {
 plugins {
     id 'com.android.application' version '8.2.2' apply false
     id 'com.android.library' version '8.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
-    id 'com.google.dagger.hilt.android' version '2.50' apply false
-    id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
+    id 'com.google.devtools.ksp' version "$ksp_version" apply false
+    id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
+}
+
+tasks.register('clean', Delete) {
+    delete rootProject.buildDir
 } 
