--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-kapt'
     id 'com.google.devtools.ksp'
     id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
 }
+
+apply plugin: 'com.google.devtools.ksp'
 
 android {
     namespace 'com.example.clicknote'
@@ -24,16 +25,10 @@ android {
             useSupportLibrary true
         }
 
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments += [
-                    "room.schemaLocation": "$projectDir/schemas",
-                    "room.incremental": "true",
-                    "room.expandProjection": "true",
-                    "dagger.fastInit": "enabled",
-                    "dagger.formatGeneratedSource": "enabled"
-                ]
-            }
+        ksp {
+            arg("room.schemaLocation", "$projectDir/schemas")
+            arg("room.incremental", "true")
+            arg("room.expandProjection", "true")
         }
     }
 
@@ -53,7 +48,8 @@ android {
         jvmTarget = '17'
         freeCompilerArgs += [
             "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api",
-            "-opt-in=androidx.compose.animation.ExperimentalAnimationApi"
+            "-opt-in=androidx.compose.animation.ExperimentalAnimationApi",
+            "-Xjvm-default=all"
         ]
     }
 
@@ -62,49 +58,69 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "1.4.3"
+        kotlinCompilerExtensionVersion "1.5.4"
     }
 
     packaging {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            pickFirsts += [
+                'META-INF/INDEX.LIST',
+                'META-INF/io.netty.versions.properties',
+                'META-INF/DEPENDENCIES'
+            ]
         }
     }
 
     configurations.all {
         resolutionStrategy {
+            force 'com.google.protobuf:protobuf-javalite:3.24.0'
             force 'com.fasterxml.jackson.core:jackson-core:2.14.2'
             force 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
             force 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
+            exclude group: 'com.google.protobuf', module: 'protobuf-java'
+            exclude group: 'com.google.api.grpc', module: 'proto-google-common-protos'
         }
     }
 }
 
-kapt {
-    correctErrorTypes true
-    useBuildCache true
-    arguments {
-        arg("dagger.fastInit", "enabled")
-        arg("dagger.formatGeneratedSource", "enabled")
-    }
+kotlin {
+    jvmToolchain(17)
 }
 
 dependencies {
     def work_version = "2.9.0"
-    def hilt_version = "2.44"
-    def room_version = "2.5.0"
-    def compose_version = "1.4.3"
+    def hilt_version = "2.49"
+    def room_version = "2.6.1"
+    def compose_version = "1.5.4"
     def firebase_version = "32.7.2"
     def retrofit_version = "2.9.0"
     def jackson_version = "2.14.2"
 
+    // Kotlin
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.21')
     implementation 'androidx.core:core-ktx:1.12.0'
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.10')
+    
+    // Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    ksp "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
+    implementation 'androidx.hilt:hilt-work:1.1.0'
+    ksp 'androidx.hilt:hilt-compiler:1.1.0'
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
+    
+    // AndroidX Core
+    implementation 'androidx.annotation:annotation:1.7.1'
+    implementation 'androidx.annotation:annotation-experimental:1.3.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     implementation 'androidx.activity:activity-compose:1.8.2'
     
-    // Compose dependencies
-    implementation platform('androidx.compose:compose-bom:2023.08.00')
+    // Compose
+    implementation platform('androidx.compose:compose-bom:2023.10.01')
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.material3:material3"
     implementation "androidx.compose.material:material"
@@ -115,7 +131,7 @@ dependencies {
     implementation "androidx.compose.material:material-icons-core"
     implementation "androidx.compose.material:material-icons-extended"
     implementation "androidx.compose.material3:material3-window-size-class"
-    
+
     // Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.1'
 
@@ -131,22 +147,6 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "androidx.work:work-runtime:$work_version"
     
-    // Hilt Worker
-    implementation 'androidx.hilt:hilt-work:1.1.0'
-    kapt 'androidx.hilt:hilt-compiler:1.1.0'
-
-    // Hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
-    implementation 'androidx.hilt:hilt-work:1.1.0'
-    kapt 'androidx.hilt:hilt-compiler:1.1.0'
-
-    // Room
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-
     // Material Design
     implementation 'com.google.android.material:material:1.11.0'
 
@@ -193,27 +193,35 @@ dependencies {
     // AWS SDK
     implementation('com.amazonaws:aws-android-sdk-s3:2.73.0') {
         exclude group: 'com.fasterxml.jackson.core'
+        exclude group: 'com.google.protobuf'
     }
     implementation('com.amazonaws:aws-android-sdk-mobile-client:2.73.0') {
         exclude group: 'com.fasterxml.jackson.core'
+        exclude group: 'com.google.protobuf'
     }
 
     // Azure Storage
     implementation('com.azure:azure-storage-blob:12.24.1') {
         exclude group: 'com.fasterxml.jackson.core'
         exclude group: 'com.fasterxml.jackson.dataformat'
+        exclude group: 'com.google.protobuf'
     }
 
     // Google Cloud Storage
     implementation(platform('com.google.cloud:libraries-bom:26.29.0')) {
         exclude group: 'com.fasterxml.jackson.core'
+        exclude group: 'com.google.protobuf'
     }
     implementation('com.google.cloud:google-cloud-storage') {
         exclude group: 'com.fasterxml.jackson.core'
+        exclude group: 'com.google.protobuf'
     }
 
     // Jackson dependencies
     implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
     implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
     implementation "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
+    
+    // Protobuf
+    implementation 'com.google.protobuf:protobuf-javalite:3.24.0'
 } 
