--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,38 @@
 buildscript {
     ext {
-        kotlin_version = '1.8.10'
-        compose_compiler_version = '1.4.3'
-        ksp_version = '1.8.10-1.0.9'
-        hilt_version = '2.44'
+        compose_version = '1.5.4'
+        kotlin_version = '1.9.20'
+        hilt_version = '2.49'
+        agp_version = '8.2.0'
     }
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath "com.android.tools.build:gradle:$agp_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
-        classpath 'com.google.gms:google-services:4.4.1'
+        classpath 'com.google.gms:google-services:4.4.0'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.2.2' apply false
-    id 'com.android.library' version '8.2.2' apply false
+    id 'com.android.application' version "$agp_version" apply false
+    id 'com.android.library' version "$agp_version" apply false
     id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
-    id 'com.google.devtools.ksp' version "$ksp_version" apply false
+    id 'com.google.devtools.ksp' version '1.9.20-1.0.14' apply false
     id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
 }
 
 tasks.register('clean', Delete) {
