--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=2g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -31,7 +31,7 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 # Increase memory for Kotlin daemon
-kotlin.daemon.jvmargs=-Xmx8192m
+kotlin.daemon.jvmargs=-Xmx2048m
 
 # Enable build caching
 org.gradle.caching=true
