--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,6 @@ plugins {
     id 'com.google.firebase.crashlytics'
 }
 
-apply plugin: 'com.google.devtools.ksp'
-
 android {
     namespace 'com.example.clicknote'
     compileSdk 34
@@ -29,6 +27,9 @@ android {
             arg("room.schemaLocation", "$projectDir/schemas")
             arg("room.incremental", "true")
             arg("room.expandProjection", "true")
+            arg("dagger.fastInit", "enabled")
+            arg("dagger.fullBindingGraphValidation", "NONE")
+            arg("dagger.hilt.android.internal.disableAndroidSuperclassValidation", "true")
         }
     }
 
@@ -58,7 +59,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "1.5.4"
+        kotlinCompilerExtensionVersion compose_version
     }
 
     packaging {
@@ -98,7 +99,7 @@ dependencies {
     def jackson_version = "2.14.2"
 
     // Kotlin
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.21')
+    implementation platform("org.jetbrains.kotlin:kotlin-bom:$kotlin_version")
     implementation 'androidx.core:core-ktx:1.12.0'
     
     // Hilt
