--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     ext {
         compose_version = '1.5.4'
-        kotlin_version = '1.9.20'
+        kotlin_version = '1.9.21'
         hilt_version = '2.49'
         agp_version = '8.2.0'
+        ksp_version = '1.9.21-1.0.15'
     }
     repositories {
         google()
@@ -23,7 +24,7 @@ plugins {
     id 'com.android.application' version "$agp_version" apply false
     id 'com.android.library' version "$agp_version" apply false
     id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
-    id 'com.google.devtools.ksp' version '1.9.20-1.0.14' apply false
+    id 'com.google.devtools.ksp' version "$ksp_version" apply false
     id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
 }
 
