--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -31,9 +31,11 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 # Increase memory for Kotlin daemon
-kotlin.daemon.jvmargs=-Xmx2048m
+kotlin.daemon.jvmargs=-Xmx4g -XX:+UseParallelGC
+kotlin.incremental=true
+kotlin.parallel.tasks.in.project=true
 
-# Enable build caching
+# Enable Gradle build cache
 org.gradle.caching=true
 
 # Enable configuration on demand
@@ -52,8 +54,8 @@ kapt.incremental.apt=true
 kapt.include.compile.classpath=false
 
 # Memory settings for KSP
-ksp.memory.heap.size=2048m
-ksp.memory.stack.size=512m
+ksp.memory.heap.size=4096m
+ksp.memory.stack.size=2048m
 
 # Suppress compileSdk warning
 android.suppressUnsupportedCompileSdk=34
@@ -66,3 +68,21 @@ ksp.workers.count=4
 # Gradle settings
 org.gradle.daemon=true
 org.gradle.workers.max=8
+
+# Dagger settings
+dagger.fastInit=enabled
+dagger.fullBindingGraphValidation=ERROR
+dagger.gradle.incremental=true
+dagger.experimentalDaggerErrorMessages=true
+
+# Android options
+android.uniquePackageNames=true
+
+# Kapt options
+kapt.use.worker.api=true
+kapt.incremental.apt=true
+kapt.include.compile.classpath=false
+
+# KSP options
+ksp.incremental=true
+ksp.incremental.intermodule=true
