--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g
+org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=2g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -XX:ReservedCodeCacheSize=512m -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -20,7 +20,7 @@ org.gradle.parallel=true
 android.useAndroidX=true
 
 # Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+android.enableJetifier=false
 
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
@@ -31,7 +31,7 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 # Increase memory for Kotlin daemon
-kotlin.daemon.jvmargs=-Xmx4g -XX:+UseParallelGC
+kotlin.daemon.jvmargs=-Xmx6g -XX:+UseParallelGC
 kotlin.incremental=true
 kotlin.parallel.tasks.in.project=true
 
@@ -47,6 +47,7 @@ android.enableR8.fullMode=true
 # Enable BuildConfig generation
 # Enable ViewBinding generation
 android.defaults.buildfeatures.viewbinding=true
+android.nonFinalResIds=false
 
 # Kapt settings
 kapt.use.worker.api=true
@@ -86,3 +87,6 @@ kapt.include.compile.classpath=false
 # KSP options
 ksp.incremental=true
 ksp.incremental.intermodule=true
+
+# Build cache settings
+org.gradle.unsafe.configuration-cache=true
