--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,15 @@ android {
             useSupportLibrary true
         }
 
+        // Load API keys from local.properties
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        
+        buildConfigField "String", "OPENAI_API_KEY", "\"${properties.getProperty('OPENAI_API_KEY', '')}\""
+        buildConfigField "String", "STRIPE_SECRET_KEY", "\"${properties.getProperty('STRIPE_SECRET_KEY', '')}\""
+        buildConfigField "String", "STRIPE_PUBLISHABLE_KEY", "\"${properties.getProperty('STRIPE_PUBLISHABLE_KEY', '')}\""
+        buildConfigField "String", "STRIPE_API_URL", "\"https://api.stripe.com/v1/\""
+
         ksp {
             arg("room.schemaLocation", "$projectDir/schemas")
             arg("room.incremental", "true")
@@ -64,6 +73,7 @@ android {
 
     buildFeatures {
         compose true
+        buildConfig true
     }
 
     composeOptions {
@@ -173,6 +183,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-config'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-perf'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     // OpenAI
     implementation 'com.aallam.openai:openai-client:3.7.0'
